--- a/changelog.txt
+++ b/changelog.txt
@@ -54,3 +54,6 @@ Build 7.2
 Build 7.2.1
 - Added custom apps (birbapp files)
 - Added "runapp" command (runs .birbapps files)
+
+Build 7.2.2
+- Added "clean" command (clears temporary files)
