--- a/changelog.txt
+++ b/changelog.txt
@@ -57,3 +57,7 @@ Build 7.2.1
 
 Build 7.2.2
 - Added "clean" command (clears temporary files)
+
+Build 7.2.3
+- Title remaining the same after exiting guess game (FIXED)
+- Help displaying "docread" and "docwrite" which was wrong (FIXED)
