--- a/changelog.txt
+++ b/changelog.txt
@@ -61,3 +61,4 @@ Build 7.2.2
 Build 7.2.3
 - Title remaining the same after exiting guess game (FIXED)
 - Help displaying "docread" and "docwrite" which was wrong (FIXED)
+- Merged usertool, "chkdsk" command and bootloader in birbtool.cmd
