--- a/changelog.txt
+++ b/changelog.txt
@@ -52,8 +52,8 @@ Build 7.2
 - Added "readdoc" command (reads documents)
 
 Build 7.2.1
-- Added custom apps (birbapp files)
-- Added "runapp" command (runs .birbapps files)
+- Added custom apps (.birbapp files)
+- Added "runapp" command (runs .birbapp files)
 
 Build 7.2.2
 - Added "clean" command (clears temporary files)
