birbos 8.2.X (NOT BIRBOS 8.3, I'M WORKING ON THAT)
xandrei's update wasn't actually 8.3, because I'm doing that.

--- a/changelog.txt
+++ b/changelog.txt
@@ -89,3 +89,6 @@ Build 8.1
 Build 8.1.1
 - Tweaked some stuff...
 - Fixed set-theme bug. (could input anything that isnt a color and that would crash birbOS)
+
+Build 8.2.X
+- Removed the DriveHQ stuff. People are just misusing it, so... nah.
